Fix overflow issue with large table data text

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,9 @@ table th {
 }
 
 table td {
+    font-size: 1.5rem;
+    overflow: auto;
+    font-weight: 500;
     border: 2px solid rgb(119, 0, 255);
     padding: 1rem;
 }
